lab1/Test/L1-A-13-45.output
Error Type B at Line 1
Error Type B at Line 3
Error Type B at Line 5
Error Type B at Line 12
Error Type A at Line 14
Error Type B at Line 17
Error Type A at Line 18
Error Type A at Line 19
Error Type B at Line 22
Error Type B at Line 22
Error Type B at Line 28
Error Type A at Line 31
Error Type A at Line 31
