lab1/Test/L1-A-13-45.cmm
int xtRkRFErUJSM ( {
  struct t {
    float , dXFOB8jE8DiZ6 [ 1091136235 ] ;
  }lbI8SFqgl = FgZDey5aVH = SQeMenFFAx3Rcu_p <= lpOd 
    / TfY0kpoCCoTD4iS ( || pvRdaZvrNWPttvhXObXZ && jBwVeqa6Z1JikTA 
    < vP6_Em - pBSsg * - ! h2KkcP6yZkL [ UOF = KiDH9Z9 
    = qPSWFDCK || eK0Y4n && - - ( GYISXqGGMNffJxW != rl4cg0rKxXpLINCJOdQ 
    + a / sU7mHpmdZuJPtv6n1qP ( FvMHklIv , G ) >= ! 663322611 
    ) > 178459155.804676089 . mtmagZEiMX0LNKtvt561 . wzd 
    == jQyJJK9uSWM ( ) + izJWpV3mDViXu1dG7Wo ] ) ;
}
int < ;
int ;
struct G CHpDrAUIJVX4nZQlg , RDcY8tzLNopN2o76Y \

;
int Rcx2RTH ( int , int MoJl69X ) {
  if #( SI )   Rn1Q ;
else   if ( &wH99x3jzsF9Or ) {
  }

  while ( < UZMY )   if FX8wX7h )   return crYeW ;
else   acnfWCIbe_W ;


}
int ;
struct ;{
}_5KkUo0n_d 
;
@~